# RLITargetDetection

./: .gitignore  README.md  main.py  pyproject.toml
data/: info_text.txt
src/: data_generator.py  detector.py  gallery.py  gui.py  visualizer.py
src/utils/: io.py
